CREATE TABLE IF NOT EXISTS FLIGHTS (
  FLIGHT_ID INTEGER PRIMARY KEY,
  SRC VARCHAR(3),
  DEST VARCHAR(3),
  PRICE INTEGER,
  DEPARTURE_TIME time,
  ARRIVAL_TIME time,
  LAST_UPDATED timestamp
);

CREATE TABLE IF NOT EXISTS FLIGHT_STOPS (
  FLIGHT_ID INTEGER,
  STOP VARCHAR(3),
  FLIGHT_ORDER SMALLINT,
  PRIMARY KEY (FLIGHT_ID, FLIGHT_ORDER)
);

CREATE TABLE IF NOT EXISTS HOTELS (
  HOTEL_ID INTEGER PRIMARY KEY,
  HOTEL_NAME VARCHAR(128),
  ADDRESS VARCHAR(512),
  CITY VARCHAR(64),
  STARS SMALLINT,
  RATING SMALLINT,
  PRICE INTEGER,
  LAST_UPDATED timestamp
);

CREATE TABLE IF NOT EXISTS HOTELS_AMENITY_MAPPER (
  HOTEL_ID INTEGER,
  AMENITY_ID SMALLINT,
  PRIMARY KEY (HOTEL_ID, AMENITY_ID)
);

CREATE TABLE IF NOT EXISTS HOTEL_AMENITIES (
  ID SMALLINT PRIMARY KEY,
  AMENITY VARCHAR(128)
);

CREATE TABLE IF NOT EXISTS REFRESH_LOG (
  REFRESH_LOG_ID SERIAL,
  ENTITY VARCHAR(64),
  REFRESH_COUNT INTEGER,
  REFRESHED_AT TIMESTAMP
);

CREATE INDEX FLIGHTS_BY_SRC_DEST_PRC_IDX ON FLIGHTS (SRC, DEST, PRICE);

CREATE INDEX FILGHTS_LAST_UPDATED_IDX ON FLIGHTS (LAST_UPDATED);

CREATE INDEX FLIGHT_STOPS_FILGH_ID_IDX ON FLIGHT_STOPS (FLIGHT_ID);

CREATE INDEX HOTELS_BY_CITY_PRICE_IDX ON HOTELS (CITY, PRICE);

CREATE INDEX HOTELS_LAST_UPDATED_IDX ON HOTELS (LAST_UPDATED);

CREATE INDEX HOTEL_AMENTITY_IDX ON HOTEL_AMENITIES (AMENITY);

CREATE INDEX REFRESH_LOG_REFRESHED_IDX ON REFRESH_LOG (REFRESHED_AT);

ALTER TABLE FLIGHT_STOPS ADD CONSTRAINT FLIGHT_STOP_FK FOREIGN KEY (FLIGHT_ID) REFERENCES FLIGHTS (FLIGHT_ID);

ALTER TABLE HOTELS_AMENITY_MAPPER ADD CONSTRAINT HOTELS_AMENITY_FK FOREIGN KEY (HOTEL_ID) REFERENCES HOTELS (HOTEL_ID);

ALTER TABLE HOTELS_AMENITY_MAPPER ADD CONSTRAINT AMENITIES_AMENITY_FK FOREIGN KEY (AMENITY_ID) REFERENCES HOTEL_AMENITIES (ID);

INSERT INTO hotel_amenities VALUES (1, 'Free Wi-Fi');
INSERT INTO hotel_amenities VALUES (2, 'Swimming pool');
INSERT INTO hotel_amenities VALUES (3, 'Fitness center');
INSERT INTO hotel_amenities VALUES (4, 'Restaurant');
INSERT INTO hotel_amenities VALUES (5, 'Bar');
INSERT INTO hotel_amenities VALUES (6, 'Room service');
INSERT INTO hotel_amenities VALUES (7, 'Parking');
INSERT INTO hotel_amenities VALUES (8, 'Spa');
