Table FLIGHTS {
  FLIGHT_ID INTEGER [pk]
  SRC VARCHAR(3)
  DEST VARCHAR(3)
  PRICE INTEGER
  DEPARTURE_TIME time
  ARRIVAL_TIME time
  LAST_UPDATED timestamp
  indexes {
    (SRC, DEST, PRICE) [name: "FLIGHTS_BY_SRC_DEST_PRC_IDX"]
    LAST_UPDATED [name: "FILGHTS_LAST_UPDATED_IDX"]
  }
}

Table FLIGHT_STOPS {
  FLIGHT_ID INTEGER [pk]
  STOP VARCHAR(3)
  ORDER SMALLINT [pk]
  indexes {
    FLIGHT_ID [name: "FLIGHT_STOPS_FILGH_ID_IDX"]
  }
}

Table HOTELS {
  HOTEL_ID INTEGER [pk]
  HOTEL_NAME VARCHAR2(128)
  ADDRESS VARCHAR2(512)
  CITY VARCHAR2(64)
  STARS SMALLINT
  RATING SMALLINT
  PRICE INTEGER
  LAST_UPDATED timestamp
  indexes {
    (CITY, PRICE) [name: "HOTELS_BY_CITY_PRICE_IDX"]
    LAST_UPDATED [name: "HOTELS_LAST_UPDATED_IDX"]
  }
}

TABLE HOTELS_AMENITY_MAPPER {
  HOTEL_ID INTEGER [pk]
  AMENITY_ID SMALLINT [pk]
}

Table HOTEL_AMENITIES {
  ID SMALLINT [pk]
  AMENITY VARCHA2(128)
  indexes {
    AMENITY [name: "HOTEL_AMENTITY_IDX"]
  }
}

Table REFRESH_LOG {
  REFRESH_LOG_ID SERIAL
  ENTITY VARCHAR2(64)
  REFRESH_COUNT INTEGER
}

Ref FLIGHT_STOP_FK: FLIGHTS.FLIGHT_ID < FLIGHT_STOPS.FLIGHT_ID
Ref HOTELS_AMENITY_FK: HOTELS.HOTEL_ID < HOTELS_AMENITY_MAPPER.HOTEL_ID
REf AMENITIES_AMENITY_FK: HOTEL_AMENITIES.ID < HOTELS_AMENITY_MAPPER.AMENITY_ID